traces/bug_519.txt
src/bamglib/Mesh2.cpp:550: error: DEAD_STORE
  The value written to &k (type int) is never used.
Showing all 1 steps of the trace


src/bamglib/Mesh2.cpp:550:3: Write of unused value
548.     int nbt =0,ifirst=-1,ilast;
549.     int i0,i1,i2;
550.     int ocut,i,j,k=-1;
         ^
551.     //  int OnAVertices =0;
552.     Icoor2 dt[3];
